fix overflow

--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -95,4 +95,4 @@
       line-height: 160%
       text-align: justify
       margin: auto
-      overflow: scroll
+      overflow: auto
